<resources>
    <string name="app_name">HealthyApp</string>
    <string name="app_ergonomics">Эргономика</string>
    <string name="auth_title">Аутентификация</string>
    <string name="save">Сохранить</string>
    <string name="commit">Подтвердить</string>
    <string name="common_error">Что-то пошло не так</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>

    //экран аутентификации
    <string name="auth_login">Логин</string>
    <string name="auth_password">Пароль</string>
    <string name="registration">зарегистрироваться</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="back">Назад</string>
    <string name="exit">Выйти</string>
    <string name="auth_no_login">Пользователя с таким логином не существует</string>
    <string name="retry">Повторить</string>

    //экран регистрации
    <string name="registration_title">Регистрация</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="registration_error">Проблемы при регистрации</string>
    <string name="password_error">Пароли не совпадают. Повторите попытку</string>

    //главное меню
    <string name="person_screen">Добавить рабочее место</string>
    <string name="statistic_screen">Статистика</string>
    <string name="info_screen">Информация</string>
    <string name="new_room_screen">Добавить помещение</string>

    //экран добавления помещения
    <string name="base_edit_title">Новое помещение</string>
    <string name="base_edit_room_number">Номер помещения</string>
    <string name="base_edit_height">Высота помещения (см)</string>
    <string name="base_edit_width">Ширина помещения (см)</string>
    <string name="base_edit_length">Длина помещения (см)</string>
    <string name="base_edit_number_workplace">Количество рабочих мест</string>
    <string name="room_error_validate">Введены некорректные данные - помещение непригодно для работы</string>
    <string name="room_number_exist">Помещение с таким номером уже было зарегистрировано</string>

    <string name="alert_need_add_workplace">Помещение успешно добавлено</string>
    <string name="add">Добавить</string>
    <string name="exist_workplace">Существующее рабочее место</string>
    <string name="new_workplace">Место для нового сотрудника</string>

    //выбор помещения
    <string name="room_number_title">Выбор помещения</string>
    <string name="room_number_choice">Выберите помещение из списка</string>
    <string name="room_number_add">Или добавьте новое</string>
    <string name="ready">Готово</string>
    <string name="room_warning_important">Данное помещение уже не удовлетворяет нормам СанПиН. Все равно добавить рабочее место?</string>
    <string name="room_warning">При добавлении в помещение нового рабочего места оно не будет соответствовать нормам СанПиН. Все равно продолжить?</string>
    <string name="room_continue">Продолжить</string>


    //экран внесения данных о пользователе
    <string name="person_title">Параметры пользователя</string>
    <string name="person_name">Введите имя пользователя для возможности идентифицировать рабочее место</string>
    <string name="person_height">Рост (см)</string>
    <string name="person_height_sit">Рост сидя (см)</string>
    <string name="person_back_height">Длина спины (см)</string>
    <string name="person_legs_height">Длина голени (см)</string>
    <string name="person_shoulder_height">Длина плеча (см)</string>
    <string name="person_incorrect_data">Для данных невозможно рассчитать параметры рабочего места. Пожалуйста, убедитесь в корректности введенных данных.</string>

    //экран рабочего места
    <string name="workplace_title">Рабочее место</string>
    <string name="workplace_table_height">Высота стола</string>
    <string name="workplace_chair_height">Высота сиденья кресла</string>
    <string name="workplace_monitor_height">Высота монитора</string>
    <string name="workplace_stand_height">Высота подставки для ног</string>
    <string name="success_save_workplace">Новое рабочее место успешно добавлено. Повторно посмотреть его параметры
    Вы можете в соответствующем разделе приложения.</string>

    //экран информации
    <string name="info_title">Список помещений</string>
    <string name="placement_number">Помещение № %1$d</string>
    <string name="placement_space">Площадь помещения: %1$s кв.м</string>
    <string name="placement_wp_number">Количество рабочих мест: %1$d</string>
    <string name="placement_go_to_wps">Рабочие места</string>
    <string name="placement_height">Высота помещения: %1$d см</string>
    
    <string name="placement_warn">Помещение не соответствует требованиям СанПиН. На каждое рабочее место приходится менее 4,5 кв.м. площади. Для соответствия требованиям необходимо уменьшить количество мест на %1$d</string>

    //экран подробной информации
    <string name="workplace_id">Рабочее место № %1$d</string>

    <string name="workplace_user_info">Сведения о пользователе</string>
    <string name="workplace_user_name">Имя пользователя</string>

    <string name="points">....................................................................................</string>



</resources>
