<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_placement_item"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:elevation="10dp"
    android:translationZ="5dp">

    <TextView
        android:id="@+id/placement_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placement_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placement_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placement_space"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/placement_number"
        app:layout_constraintTop_toBottomOf="@id/placement_number" />

    <TextView
        android:id="@+id/placement_wp_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placement_wp_number"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/placement_number"
        app:layout_constraintTop_toBottomOf="@id/placement_space" />

</androidx.constraintlayout.widget.ConstraintLayout>