<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/workplace_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/workplace_table_height"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/workplace_table_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/workplace_chair_height"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/workplace_chair_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/workplace_monitor_height"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/workplace_monitor_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/workplace_stand_height"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/workplace_stand_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/workplace_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/commit"
            android:textColor="@color/white" />
    </FrameLayout>


</LinearLayout>