<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/base_edit_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/room_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/base_edit_room_number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/room_number_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/room_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/base_edit_height" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/room_height_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/room_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/base_edit_width" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/room_width_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/room_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/base_edit_length" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/room_length_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/base_edit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button"
            android:padding="16dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </FrameLayout>

</LinearLayout>
