<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_drag_handle_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/workplace_title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workplace_table_height" />

    <TextView
        android:id="@+id/workplace_table_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteShadow"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workplace_keyboard_height" />

    <TextView
        android:id="@+id/workplace_keyboard_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteShadow"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workplace_chair_height" />

    <TextView
        android:id="@+id/workplace_chair_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteShadow"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workplace_monitor_height" />

    <TextView
        android:id="@+id/workplace_monitor_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteShadow"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/workplace_stand_height" />

    <TextView
        android:id="@+id/workplace_stand_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/whiteShadow"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/whiteShadow"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/workplace_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/commit"
            android:textColor="@color/white" />
    </FrameLayout>


</LinearLayout>